Fixed spacing

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,6 +18,7 @@
   width: 400px;
   height: 300px;
   flex: 1 1 50%;
+  padding-left: 20px;
 }
 
 .second-box {
@@ -26,5 +27,6 @@
   width: 400px;
   height: 300px;
   flex: 1 1 50%;
+  padding-right: 20px;
 }
 
